@@ -83,10 +83,12 @@ module Kiba
         end
 
         def handle_requirements
-          [@files[:source], @files[:lookup]].compact.flatten.map(&:required).compact.each do |creator|
-            creator.call
+          [@files[:source], @files[:lookup]].compact.flatten.compact.each do |registered|
+            next unless  registered.required
+
+            registered.required.call
           end
-          
+
           check_requirements
         rescue MissingDependencyError => err
           puts "JOB FAILED: DEPENDENCY ERROR IN: #{err.calling_job}"
